refactor: 팔로우 API의 응답 type이 dto가 아닌 코드에 대한 수정